--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   form_builder_validators: ^8.1.1
   flutter_form_builder: ^7.7.0
   auto_validate: ^1.0.8
-  pull_to_refresh: ^2.0.0
+  dropdown_button2: ^1.9.2
+
   cloud_firestore: ^3.4.3
   datetime_picker_formfield: ^2.0.1
   intl: ^0.17.0
